# llm_training

./: .gitignore  pyproject.toml
models/v1/: TRAINING_PLAN.md
models/v1/explore/: GPTModel.ipynb  base_model.ipynb  train.ipynb
models/v1/src/: base_model.py  gpt_model.py  mem_diag.py  train.py
models/v2/: TRAINING_PLAN.md
models/v2/explore/: train.ipynb
models/v2/notebooks/: export_hf.py  run_lm_eval.sh  train.ipynb  training_report.ipynb
models/v2/notebooks/bench_results/exports__qwen3_v2_anneal_hf/: results_2026-06-07T21-07-20.100748.json
models/v2/scripts/: anneal.sh  train.sh
models/v2/src/: anneal.py  bootstrap.py  data.py  logging_utils.py  pretrain.py  qwen3_model.py  run.py  tokenizer.py  training.py
models/v3/: CODE_GRAPH.md  MANIFEST.json
models/v3/graph_app/: build_graph.py  index.html  serve.sh
models/v3/scripts/: clear_gpu.sh  crontab.txt  prune_checkpoints.sh  stop_training.sh  train_session.sh
models/v3/src/: anneal.py  bootstrap.py  data.py  eval.py  pretrain.py  qwen3_model.py  run.py  training.py
scripts/: MILESTONE_PUSH.md  push_milestone.sh
